samples/_failures_safe/1761364612_fa4c97_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea1f2ab7.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_ea1f2ab7.c:154:16: error: missing terminating " character
  154 |         printf("Token %zu: %s ->
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ea1f2ab7.c:154:9: error: expected expression at end of input
  154 |         printf("Token %zu: %s ->
      |         ^~~~~~
./samples/SAFE/__tmp_ea1f2ab7.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea1f2ab7.c:154:9: error: expected declaration or statement at end of input
